# micrograd_cpp

./: .gitignore  CMakeLists.txt  main.cpp
include/: Value.h
lib/: Value.cpp
src/: main.cpp
tests/: operations.cpp
